# lenovo-dock

./: README.md  fu-lenovo-dock-common.h  fu-lenovo-dock-device.c  fu-lenovo-dock-device.h  fu-lenovo-dock-firmware.c  fu-lenovo-dock-firmware.h  fu-plugin-lenovo-dock.c  lenovo-dock.quirk  meson.build
data/: firmware.metainfo.xml
